client: i18n-view preparations (2) - improvements in errors mapper - menu.fxml uses strings properties

--- a/rchat-client/src/main/resources/prop/strings_en.properties
+++ b/rchat-client/src/main/resources/prop/strings_en.properties
@@ -1,14 +1,23 @@
 # suppress inspection "UnusedProperty" for whole file
 #
-any.connection-error=Service is currently unreachable.\nPlease try again later.
+any.remote-conn-error=Service is currently unavailable.\nPlease try again later.
 any.server-impl-failure=Something went wrong on service end.\nInternal code: 0x0010FA0Y.
-any.default-reason=Something went wrong on service end.\nInternal code: 0x0010FA0Z.
+any.default-err-reason=Something went wrong on service end.\nInternal code: 0x0010FA0Z.
 #
-login.welcome=This is RChat by 208316. Who are you?1
-login.username=Username *
-login.password=Password
-login.enter=ENTER
+fxml.menu.file=File
+fxml.menu.exit=Exit
+fxml.menu.mode=Mode
+fxml.menu.hessian=Hessian
+fxml.menu.burlap=Burlap
+fxml.menu.xml-rpc=XmlRpc
 #
-login.error.ALREADY_LOGGED_IN=You are already logged in.\nPlease ise your opened session or wait 5 min.
-login.error.GIVEN_BAD_PASSWORD=Given credentials are incorrect
-login.error.GIVEN_BAD_USERNAME=Given username is forbidden.\nAllowed length: from 1 up to 10.\nAllowed chars:: a-zA-Z0-9-_.
+fxml.login.welcome=This is RChat by 208316. Who are you?1
+fxml.login.username=Username *
+fxml.login.password=Password
+fxml.login.enter=ENTER
+#
+fxml.main.sth=sth
+#
+error.login.ALREADY_LOGGED_IN=You are already logged in.\nPlease ise your opened session or wait 5 min.
+error.login.GIVEN_BAD_PASSWORD=Given credentials are incorrect
+error.login.GIVEN_BAD_USERNAME=Given username is forbidden.\nAllowed length: from 1 up to 10.\nAllowed chars:: a-zA-Z0-9-_.
