client: i18n-view preparations (3) - error mapper is now general locale helper - locale helper moved to util package - localized  i18n strings in LoginController - moved ResourceBundle initialization outsize sceneChanger

--- a/rchat-client/src/main/resources/prop/strings_en.properties
+++ b/rchat-client/src/main/resources/prop/strings_en.properties
@@ -16,6 +16,9 @@ fxml.login.username=Username *
 fxml.login.password=Password
 fxml.login.enter=ENTER
 #
+ctrl.login.initializing=Initializing app, please wait ...
+ctrl.login.processing=Processing ...
+#
 fxml.main.sth=sth
 #
 error.login.ALREADY_LOGGED_IN=You are already logged in.\nPlease ise your opened session or wait 5 min.
