client: option in menu to run test of clients

--- a/rchat-client/src/main/resources/prop/strings_en.properties
+++ b/rchat-client/src/main/resources/prop/strings_en.properties
@@ -10,6 +10,7 @@ fxml.menu.mode=Mode
 fxml.menu.hessian=Hessian
 fxml.menu.burlap=Burlap
 fxml.menu.xml-rpc=XmlRpc
+fxml.menu.test=Test
 #
 fxml.login.welcome=This is RChat by 208316. Who are you?1
 fxml.login.username=Username *
