--- a/rchat-client/src/main/resources/prop/strings_en.properties
+++ b/rchat-client/src/main/resources/prop/strings_en.properties
@@ -1,8 +1,8 @@
 # suppress inspection "UnusedProperty" for whole file
 #
 any.remote-conn-error=Service is currently unavailable.\nPlease try again later.
-any.server-impl-failure=Something went wrong on service end.\nInternal code: 0x0010FA0Y.
-any.default-err-reason=Something went wrong on service end.\nInternal code: 0x0010FA0Z.
+any.server-impl-failure=Something went wrong on service end.\nInternal code: 0x00000001.
+any.default-err-reason=Something went wrong on service end.\nInternal code: 0x00000001.
 #
 fxml.menu.file=File
 fxml.menu.exit=Exit
@@ -12,7 +12,7 @@ fxml.menu.burlap=Burlap
 fxml.menu.xml-rpc=XmlRpc
 fxml.menu.test=Test
 #
-fxml.login.welcome=This is RChat by 208316. Who are you?1
+fxml.login.welcome=This is RChat by 208316. Who are you?
 fxml.login.username=Username *
 fxml.login.password=Password
 fxml.login.enter=ENTER
@@ -22,6 +22,6 @@ ctrl.login.processing=Processing ...
 #
 fxml.main.sth=sth
 #
-error.login.ALREADY_LOGGED_IN=You are already logged in.\nPlease ise your opened session or wait 5 min.
-error.login.GIVEN_BAD_PASSWORD=Given credentials are incorrect
+error.login.ALREADY_LOGGED_IN=You are already logged in.\nPlease use your opened session or wait 5 min (ghost session will be automatically closed).
+error.login.GIVEN_BAD_PASSWORD=Given credentials are incorrect.
 error.login.GIVEN_BAD_USERNAME=Given username is forbidden.\nAllowed length: from 1 up to 10.\nAllowed chars:: a-zA-Z0-9-_.
