client: logout option in menu

--- a/rchat-client/src/main/resources/prop/strings_en.properties
+++ b/rchat-client/src/main/resources/prop/strings_en.properties
@@ -5,6 +5,7 @@ any.server-impl-failure=Something went wrong on service end.\nInternal code: 0x0
 any.default-err-reason=Something went wrong on service end.\nInternal code: 0x00000001.
 #
 fxml.menu.file=File
+fxml.menu.logout=Logout
 fxml.menu.exit=Exit
 fxml.menu.mode=Mode
 fxml.menu.hessian=Hessian
