client: polish - section are separated - fxml is not formatted-by-hand anymore, only auto formatting - keep new lines in properties file

--- a/rchat-client/src/main/resources/prop/strings_en.properties
+++ b/rchat-client/src/main/resources/prop/strings_en.properties
@@ -1,8 +1,11 @@
 # suppress inspection "UnusedProperty" for whole file
 #
-any.remote-conn-error=Service is currently unavailable.\nPlease try again later.
-any.server-impl-failure=Something went wrong on service end.\nInternal code: 0x00000001.
-any.default-err-reason=Something went wrong on service end.\nInternal code: 0x00000001.
+any.remote-conn-error=Service is currently unavailable.\n\
+  Please try again later.
+any.server-impl-failure=Something went wrong on service end.\n\
+  Internal code: 0x00000001.
+any.default-err-reason=Something went wrong on service end.\n\
+  \u00F3Internal code: 0x00000002.
 #
 fxml.menu.file=File
 fxml.menu.logout=Logout
@@ -10,7 +13,7 @@ fxml.menu.exit=Exit
 fxml.menu.mode=Mode
 fxml.menu.hessian=Hessian
 fxml.menu.burlap=Burlap
-fxml.menu.xml-rpc=XmlRpc
+fxml.menu.xml-rpc=XML-RPC
 fxml.menu.test=Test
 #
 fxml.login.welcome=This is RChat by 208316. Who are you?
@@ -23,6 +26,10 @@ ctrl.login.processing=Processing ...
 #
 fxml.main.sth=sth
 #
-error.login.ALREADY_LOGGED_IN=You are already logged in.\nPlease use your opened session or wait 5 min (ghost session will be automatically closed).
+error.login.ALREADY_LOGGED_IN=You are already logged in.\n\
+  Please use your opened session,\n\
+  or wait 5 min (ghost session will be automatically closed).
 error.login.GIVEN_BAD_PASSWORD=Given credentials are incorrect.
-error.login.GIVEN_BAD_USERNAME=Given username is forbidden.\nAllowed length: from 1 up to 10.\nAllowed chars:: a-zA-Z0-9-_.
+error.login.GIVEN_BAD_USERNAME=Given username is forbidden.\n\
+  Allowed length: from 1 up to 10.\n\
+  Allowed chars:: a-zA-Z0-9-_.
