client: load channel list on login

--- a/rchat-client/src/main/resources/prop/strings_en.properties
+++ b/rchat-client/src/main/resources/prop/strings_en.properties
@@ -24,7 +24,10 @@ fxml.login.enter=ENTER
 ctrl.login.initializing=Initializing app, please wait ...
 ctrl.login.processing=Processing ...
 #
-fxml.main.sth=sth
+fxml.main.status=Status
+fxml.main.send=Send
+#
+ctrl.main.initializing=Initializing, please wait ...
 #
 error.login.ALREADY_LOGGED_IN=You are already logged in.\n\
   Please use your opened session,\n\
