client: possible to join to channels - user list is populated

--- a/rchat-client/src/main/resources/prop/strings_en.properties
+++ b/rchat-client/src/main/resources/prop/strings_en.properties
@@ -36,3 +36,8 @@ error.login.GIVEN_BAD_PASSWORD=Given credentials are incorrect.
 error.login.GIVEN_BAD_USERNAME=Given username is forbidden.\n\
   Allowed length: from 1 up to 10.\n\
   Allowed chars:: a-zA-Z0-9-_.
+#
+error.logout.GIVEN_BAD_SESSION=Incorrect session, expired? Please restart application.
+#
+error.channels.GIVEN_BAD_SESSION=Incorrect session, expired? Please restart application.
+#
