--- a/rchat-client/src/main/resources/prop/strings_en.properties
+++ b/rchat-client/src/main/resources/prop/strings_en.properties
@@ -2,10 +2,10 @@
 #
 any.remote-conn-error=Service is currently unavailable.\n\
   Please try again later.
-any.server-impl-failure=Something went wrong on service end.\n\
+any.server-impl-failure=Something went wrong.\n\
   Internal code: 0x00000001.
-any.default-err-reason=Something went wrong on service end.\n\
-  \u00F3Internal code: 0x00000002.
+any.default-err-reason=Something went wrong.\n\
+  Internal code: 0x00000002.
 #
 fxml.menu.file=File
 fxml.menu.logout=Logout
@@ -37,7 +37,9 @@ error.login.GIVEN_BAD_USERNAME=Given username is forbidden.\n\
   Allowed length: from 1 up to 10.\n\
   Allowed chars:: a-zA-Z0-9-_.
 #
-error.logout.GIVEN_BAD_SESSION=Incorrect session, expired? Please restart application.
+error.logout.GIVEN_BAD_SESSION=Incorrect session, expired?\n\
+  Please restart application.
 #
-error.channels.GIVEN_BAD_SESSION=Incorrect session, expired? Please restart application.
+error.channels.GIVEN_BAD_SESSION=Incorrect session, expired?\n\
+  Please restart application.
 #
