client: error strings

--- a/rchat-client/src/main/resources/prop/strings_en.properties
+++ b/rchat-client/src/main/resources/prop/strings_en.properties
@@ -1,11 +1,8 @@
 # suppress inspection "UnusedProperty" for whole file
 #
-any.remote-conn-error=Service is currently unavailable.\n\
-  Please try again later.
-any.server-impl-failure=Something went wrong.\n\
-  Internal code: 0x00000001.
-any.default-err-reason=Something went wrong.\n\
-  Internal code: 0x00000002.
+any.remote-conn-error=Service is currently unavailable.\nPlease try again later.
+any.server-impl-failure=Something went wrong.\nInternal code: 0x00000001.
+any.default-err-reason=Something went wrong.\nInternal code: 0x00000002.
 #
 fxml.menu.file=File
 fxml.menu.logout=Logout
@@ -29,17 +26,53 @@ fxml.main.send=Send
 #
 ctrl.main.initializing=Initializing, please wait ...
 #
-error.login.ALREADY_LOGGED_IN=You are already logged in.\n\
-  Please use your opened session,\n\
-  or wait 5 min (ghost session will be automatically closed).
+error.login.ALREADY_LOGGED_IN=You are already logged in.\nGhost session will be automatically closed in 5 minutes.
 error.login.GIVEN_BAD_PASSWORD=Given credentials are incorrect.
-error.login.GIVEN_BAD_USERNAME=Given username is forbidden.\n\
-  Allowed length: from 1 up to 10.\n\
-  Allowed chars:: a-zA-Z0-9-_.
+error.login.GIVEN_BAD_USERNAME=Given username is forbidden.\nAllowed length: from 1 up to 10.\nAllowed chars: a-zA-Z0-9-_.
 #
-error.logout.GIVEN_BAD_SESSION=Incorrect session, expired?\n\
-  Please restart application.
+error.logout.GIVEN_BAD_SESSION=Incorrect session, expired?\nPlease log in again.\nInternal code: 0x00000003.
 #
-error.channels.GIVEN_BAD_SESSION=Incorrect session, expired?\n\
-  Please restart application.
+error.channels.GIVEN_BAD_SESSION=Incorrect session, expired?\nPlease log in again.\nInternal code: 0x00000004.
 #
+error.join.GIVEN_BAD_SESSION=Incorrect session, expired?\nPlease log in again.\nInternal code: 0x00000005.
+error.join.GIVEN_BAD_CHANNEL=Something went wrong.\nInternal code: 0x00000006.
+error.join.GIVEN_BAD_PASSWORD=Given password is not proper.
+error.join.UNWELCOME_BANNED=You are not banned on this channel, sorry.
+#
+error.part.GIVEN_BAD_SESSION=Incorrect session, expired?\nPlease log in again.\nInternal code: 0x00000007.
+error.part.GIVEN_BAD_CHANNEL=Something went wrong.\nInternal code: 0x00000004.
+#
+error.topic.GIVEN_BAD_SESSION=Incorrect session, expired?\nPlease log in again.\nInternal code: 0x00000008.
+error.topic.GIVEN_BAD_CHANNEL=Something went wrong.\nInternal code: 0x00000009.
+error.topic.NO_PERMISSION=You are not permitted to that operation, sorry.
+#
+error.kick.GIVEN_BAD_SESSION=Incorrect session, expired?\nPlease log in again.\nInternal code: 0x000000A.
+error.kick.GIVEN_BAD_CHANNEL=Something went wrong.\nInternal code: 0x000000B.
+error.kick.GIVEN_BAD_USERNAME=Given username is not proper.
+error.kick.NO_PERMISSION=You are not permitted to that operation, sorry.
+#
+error.ban.GIVEN_BAD_SESSION=Incorrect session, expired?\nPlease log in again.\nInternal code: 0x0000000C.
+error.ban.GIVEN_BAD_CHANNEL=Something went wrong.\nInternal code: 0x0000000D.
+error.ban.GIVEN_BAD_USERNAME=Given username is not proper.
+error.ban.NO_PERMISSION=You are not permitted to that operation, sorry.
+#
+error.admin.GIVEN_BAD_SESSION=Incorrect session, expired?\nPlease log in again.\nInternal code: 0x0000000E.
+error.admin.GIVEN_BAD_CHANNEL=Something went wrong.\nInternal code: 0x0000000F.
+error.admin.GIVEN_BAD_USERNAME=Given username is not proper.
+error.admin.NO_PERMISSION=You are not permitted to that operation, sorry.
+#
+error.ignore.GIVEN_BAD_SESSION=Incorrect session, expired?\nPlease log in again.\nInternal code: 0x00000010.
+error.ignore.GIVEN_BAD_CHANNEL=Something went wrong.\nInternal code: 0x00000011.
+error.ignore.GIVEN_BAD_USERNAME=Given username is not proper.
+error.ignore.NO_PERMISSION=You are not permitted to that operation, sorry.
+#
+error.privy.GIVEN_BAD_SESSION=Incorrect session, expired?\nPlease log in again.\nInternal code: 0x00000012.
+error.privy.GIVEN_BAD_CHANNEL=Something went wrong.\nInternal code: 0x00000013.
+error.privy.GIVEN_BAD_USERNAME=Given username is not proper.
+error.privy.NO_PERMISSION=You are not permitted to that operation, sorry.
+#
+error.message.GIVEN_BAD_SESSION=Incorrect session, expired?\nPlease log in again.\nInternal code: 0x00000014.
+error.message.GIVEN_BAD_CHANNEL=Something went wrong.\nInternal code: 0x00000015.
+error.message.NO_PERMISSION=You are not permitted to that operation, sorry.
+#
+error.whats-up.GIVEN_BAD_SESSION=Incorrect session, expired?\nPlease log in again.
