--- a/rchat-client/src/main/resources/prop/strings_en.properties
+++ b/rchat-client/src/main/resources/prop/strings_en.properties
@@ -75,4 +75,4 @@ error.message.GIVEN_BAD_SESSION=Incorrect session, expired?\nPlease log in again
 error.message.GIVEN_BAD_CHANNEL=Something went wrong.\nInternal code: 0x00000015.
 error.message.NO_PERMISSION=You are not permitted to that operation, sorry.
 #
-error.whats-up.GIVEN_BAD_SESSION=Incorrect session, expired?\nPlease log in again.
+error.whats-up.GIVEN_BAD_SESSION=Incorrect session, expired?\nPlease log in again.\nInternal code: 0x00000016.
