--- a/rchat-client/src/main/resources/prop/strings_en.properties
+++ b/rchat-client/src/main/resources/prop/strings_en.properties
@@ -26,6 +26,13 @@ fxml.main.send=Send
 #
 ctrl.main.initializing=Initializing, please wait ...
 #
+whats-up.TOPIC=* {1} changed topic on {0} to {2]
+whats-up.JOIN=a
+whats-up.PART=a
+whats-up.KICK=a
+whats-up.ADMIN=a
+whats-up.IGNORE=a
+#
 error.login.ALREADY_LOGGED_IN=You are already logged in.\nGhost session will be automatically closed in 5 minutes.
 error.login.GIVEN_BAD_PASSWORD=Given credentials are incorrect.
 error.login.GIVEN_BAD_USERNAME=Given username is forbidden.\nAllowed length: from 1 up to 10.\nAllowed chars: a-zA-Z0-9-_.
