--- a/rchat-client/src/main/resources/prop/strings_en.properties
+++ b/rchat-client/src/main/resources/prop/strings_en.properties
@@ -26,12 +26,19 @@ fxml.main.send=Send
 #
 ctrl.main.initializing=Initializing, please wait ...
 #
-whats-up.TOPIC=* {1} changed topic on {0} to {2]
-whats-up.JOIN=a
-whats-up.PART=a
-whats-up.KICK=a
-whats-up.ADMIN=a
-whats-up.IGNORE=a
+message.user=CtMsgUser.java
+message.info=CtMsgInfo.java
+#
+whats-up.TOPIC=* {1} changes topic on #{0} to "{2]"
+whats-up.JOIN=* {1} has joined #{0}
+whats-up.PART=* {1} has left #{0}
+whats-up.KICK=* {1} has ben kicked from #{0} by {2}
+whats-up.BAN.0=* {1} has ben banned on #{0} by {2}
+whats-up.BAN.1=* {1} has ben unbanned on #{0} by {2}
+whats-up.ADMIN.0=* {1} is now admin on #{0}, promoted by {2}
+whats-up.ADMIN.1=* {1} isn't admin on #{0}, degraded by {2}
+whats-up.IGNORE.0=* {1} is now ignored by you on #{0}
+whats-up.IGNORE.1=* {1} isn't ignored by you on #{0}
 #
 error.login.ALREADY_LOGGED_IN=You are already logged in.\nGhost session will be automatically closed in 5 minutes.
 error.login.GIVEN_BAD_PASSWORD=Given credentials are incorrect.
