--- a/rchat-client/src/main/resources/prop/strings_en.properties
+++ b/rchat-client/src/main/resources/prop/strings_en.properties
@@ -40,6 +40,15 @@ whats-up.ADMIN.0=* {1} isn't admin on #{0}, degraded by {2}
 whats-up.IGNORE.1=* {1} is now ignored by you on #{0}
 whats-up.IGNORE.0=* {1} isn't ignored by you on #{0}
 #
+cmd.UNKNOWN=Unknown command given.
+cmd.TOPIC=a
+cmd.JOIN=a
+cmd.PART=a
+cmd.KICK=a
+cmd.BAN=a
+cmd.ADMIN=a
+cmd.IGNORE=a
+#
 error.login.ALREADY_LOGGED_IN=You are already logged in.\nGhost session will be automatically closed in 5 minutes.
 error.login.GIVEN_BAD_PASSWORD=Given credentials are incorrect.
 error.login.GIVEN_BAD_USERNAME=Given username is forbidden.\nAllowed length: from 1 up to 10.\nAllowed chars: a-zA-Z0-9-_.
