client: /cmd impl (1)

--- a/rchat-client/src/main/resources/prop/strings_en.properties
+++ b/rchat-client/src/main/resources/prop/strings_en.properties
@@ -29,25 +29,25 @@ ctrl.main.initializing=Initializing, please wait ...
 message.user=CtMsgUser.java
 message.info=CtMsgInfo.java
 #
-whats-up.TOPIC=* {1} changes topic on #{0} to "{2]"
-whats-up.JOIN=* {1} has joined #{0}
-whats-up.PART=* {1} has left #{0}
-whats-up.KICK=* {1} has ben kicked from #{0} by {2}
-whats-up.BAN.1=* {1} has ben banned on #{0} by {2}
-whats-up.BAN.0=* {1} has ben unbanned on #{0} by {2}
-whats-up.ADMIN.1=* {1} is now admin on #{0}, promoted by {2}
-whats-up.ADMIN.0=* {1} isn't admin on #{0}, degraded by {2}
-whats-up.IGNORE.1=* {1} is now ignored by you on #{0}
-whats-up.IGNORE.0=* {1} isn't ignored by you on #{0}
+whats-up.topic=* {1} changes topic on #{0} to "{2]"
+whats-up.join=* {1} has joined #{0}
+whats-up.part=* {1} has left #{0}
+whats-up.kick=* {1} has ben kicked from #{0} by {2}
+whats-up.ban.1=* {1} has ben banned on #{0} by {2}
+whats-up.ban.0=* {1} has ben unbanned on #{0} by {2}
+whats-up.admin.1=* {1} is now admin on #{0}, promoted by {2}
+whats-up.admin.0=* {1} isn't admin on #{0}, degraded by {2}
+whats-up.ignore.1=* {1} is now ignored by you on #{0}
+whats-up.ignore.0=* {1} isn't ignored by you on #{0}
 #
-cmd.UNKNOWN=Unknown command given.
-cmd.TOPIC=a
-cmd.JOIN=a
-cmd.PART=a
-cmd.KICK=a
-cmd.BAN=a
-cmd.ADMIN=a
-cmd.IGNORE=a
+cmd.unknown=Unknown command given.
+cmd.topic.syntax=Syntax: /topic some fancy text
+cmd.join.syntax=Syntax: /join channel-name
+cmd.part.syntax=Syntax: /part channel-name
+cmd.kick.syntax=Syntax: /kick nick-name
+cmd.ban.syntax=Syntax: /ban nick-name on/off
+cmd.admin.syntax=Syntax: /admin nick-name on/off
+cmd.ignore.syntax=Syntax: /ignore nick-name on/off
 #
 error.login.ALREADY_LOGGED_IN=You are already logged in.\nGhost session will be automatically closed in 5 minutes.
 error.login.GIVEN_BAD_PASSWORD=Given credentials are incorrect.
