server/client: fix setting topic

--- a/rchat-client/src/main/resources/prop/strings_en.properties
+++ b/rchat-client/src/main/resources/prop/strings_en.properties
@@ -29,7 +29,7 @@ ctrl.main.initializing=Initializing, please wait ...
 message.user=CtMsgUser.java
 message.info=CtMsgInfo.java
 #
-whats-up.topic=* {1} changes topic on #{0} to "{2]"
+whats-up.topic=* {1} changes topic on #{0} to: {2}
 whats-up.join=* {1} has joined #{0}
 whats-up.part=* {1} has left #{0}
 whats-up.kick=* {1} has ben kicked from #{0} by {2}
