general: fix pack - comment out Collections.unmodifiableMap(channelsMap) - maybe bug?! - comment out AnyTypeFactory (too risky) - CtChannel.users/messages are synchronized - fix i18n strings - whatsUp.JOIN parameters order - ignore uses channel

--- a/rchat-client/src/main/resources/prop/strings_en.properties
+++ b/rchat-client/src/main/resources/prop/strings_en.properties
@@ -36,9 +36,9 @@ whats-up.kick=* {1} has ben kicked from #{0} by {2}
 whats-up.ban.1=* {1} has ben banned on #{0} by {2}
 whats-up.ban.0=* {1} has ben unbanned on #{0} by {2}
 whats-up.admin.1=* {1} is now admin on #{0}, promoted by {2}
-whats-up.admin.0=* {1} isn't admin on #{0}, degraded by {2}
+whats-up.admin.0=* {1} is not admin on #{0}, degraded by {2}
 whats-up.ignore.1=* {1} is now ignored by you on #{0}
-whats-up.ignore.0=* {1} isn't ignored by you on #{0}
+whats-up.ignore.0=* {1} is not ignored by you on #{0}
 #
 cmd.unknown=Unknown command given.
 cmd.topic.syntax=Syntax: /topic some fancy text
@@ -60,7 +60,7 @@ error.channels.GIVEN_BAD_SESSION=Incorrect session, expired?\nPlease log in agai
 error.join.GIVEN_BAD_SESSION=Incorrect session, expired?\nPlease log in again.\nInternal code: 0x00000005.
 error.join.GIVEN_BAD_CHANNEL=Something went wrong.\nInternal code: 0x00000006.
 error.join.GIVEN_BAD_PASSWORD=Given password is not proper.
-error.join.UNWELCOME_BANNED=You are not banned on this channel, sorry.
+error.join.UNWELCOME_BANNED=You are banned on this channel, sorry.
 #
 error.part.GIVEN_BAD_SESSION=Incorrect session, expired?\nPlease log in again.\nInternal code: 0x00000007.
 error.part.GIVEN_BAD_CHANNEL=Something went wrong.\nInternal code: 0x00000004.
