client: fix notification & flag  set about ignoring

--- a/rchat-client/src/main/resources/strings/strings_en.properties
+++ b/rchat-client/src/main/resources/strings/strings_en.properties
@@ -37,8 +37,8 @@ whats-up.ban.1=* {1} has ben banned on #{0} by {2}
 whats-up.ban.0=* {1} has ben unbanned on #{0} by {2}
 whats-up.admin.1=* {1} is now admin on #{0}, promoted by {2}
 whats-up.admin.0=* {1} is not admin on #{0}, degraded by {2}
-whats-up.ignore.1=* {1} is now ignored by you on #{0}
-whats-up.ignore.0=* {1} is not ignored by you on #{0}
+whats-up.ignore.1=* {2} now ignoring messages written by {1}
+whats-up.ignore.0=* {2} is not ignoring messages written by {1}
 #
 cmd.unknown=Unknown command given.
 cmd.topic.syntax=Syntax: /topic some fancy text
