--- a/rchat-client/src/main/resources/strings/strings_en.properties
+++ b/rchat-client/src/main/resources/strings/strings_en.properties
@@ -41,6 +41,7 @@ whats-up.ignore.1=* {2} now ignoring messages written by {1}
 whats-up.ignore.0=* {2} is not ignoring messages written by {1}
 #
 cmd.unknown=Unknown command given.
+cmd.list=Available commands: /join /part /topic /kick /ban /admin /ignore
 cmd.join.syntax=Syntax: /join channel-name
 cmd.part.syntax=Syntax: /part channel-name
 cmd.topic.syntax=Syntax: /topic some fancy text
