client: possible to join password-protected channels

--- a/rchat-client/src/main/resources/strings/strings_en.properties
+++ b/rchat-client/src/main/resources/strings/strings_en.properties
@@ -48,6 +48,12 @@ cmd.ban.syntax=Syntax: /ban nick-name on/off
 cmd.admin.syntax=Syntax: /admin nick-name on/off
 cmd.ignore.syntax=Syntax: /ignore nick-name on/off
 #
+join-pass.title=join&password
+join-pass.header=You want join #{0}?
+join-pass.label=What is the password?
+join-pass.ok=Come in.
+join-pass.cancel=Give up.
+#
 error.login.ALREADY_LOGGED_IN=You are already logged in.\nGhost session will be automatically closed in 5 minutes.
 error.login.GIVEN_BAD_PASSWORD=Given credentials are incorrect.
 error.login.GIVEN_BAD_USERNAME=Given username is forbidden.\nAllowed length: from 1 up to 10.\nAllowed chars: a-zA-Z0-9-_.
