axe/protocol/client/server: polishing - follow FindBugs advices - general polishing

--- a/rchat-client/src/main/resources/strings/strings_en.properties
+++ b/rchat-client/src/main/resources/strings/strings_en.properties
@@ -31,14 +31,14 @@ message.info=CtMsgInfo.java
 #
 whats-up.join=* {1} has joined #{0}
 whats-up.part=* {1} has left #{0}
-whats-up.topic=* {1} changes topic on #{0} to: {2}
+whats-up.topic=* {1} changed topic on #{0} to: {2}
 whats-up.kick=* {1} has ben kicked from #{0} by {2}
 whats-up.ban.1=* {1} has ben banned on #{0} by {2}
 whats-up.ban.0=* {1} has ben unbanned on #{0} by {2}
-whats-up.admin.1=* {1} is now admin on #{0}, promoted by {2}
-whats-up.admin.0=* {1} is not admin on #{0}, degraded by {2}
-whats-up.ignore.1=* {2} now ignoring messages written by {1}
-whats-up.ignore.0=* {2} is not ignoring messages written by {1}
+whats-up.admin.1=* {1} is now an admin on #{0}, promoted by {2}
+whats-up.admin.0=* {1} is no longer admin on #{0}, degraded by {2}
+whats-up.ignore.1=* {2} ignores messages written by {1}
+whats-up.ignore.0=* {2} no longer ignore messages written by {1}
 #
 cmd.unknown=Unknown command given.
 cmd.list=Available commands: /topic /kick /ban /admin /ignore
@@ -49,7 +49,7 @@ cmd.admin.syntax=Syntax: /admin nick-name on/off
 cmd.ignore.syntax=Syntax: /ignore nick-name on/off
 #
 join-pass.title=join&password
-join-pass.header=You want join #{0}?
+join-pass.header=Do you want join #{0}?
 join-pass.label=What is the password?
 join-pass.ok=Come in.
 join-pass.cancel=Give up.
