client: get title format from strings

--- a/rchat-client/src/main/resources/strings/strings_en.properties
+++ b/rchat-client/src/main/resources/strings/strings_en.properties
@@ -29,6 +29,9 @@ ctrl.main.initializing=Initializing, please wait ...
 message.user=CtMsgUser.java
 message.info=CtMsgInfo.java
 #
+title.alone=RChat
+title.string=RChat - {0}
+#
 whats-up.join=* {1} has joined #{0}
 whats-up.part=* {1} has left #{0}
 whats-up.topic=* {1} changed topic on #{0} to: {2}
