client: strings update

--- a/rchat-client/src/main/resources/strings/strings_en.properties
+++ b/rchat-client/src/main/resources/strings/strings_en.properties
@@ -26,8 +26,7 @@ fxml.main.send=Send
 #
 ctrl.main.initializing=Initializing, please wait ...
 #
-message.user=CtMsgUser.java
-message.info=CtMsgInfo.java
+message.see=PrintMsg.java,PrintInfo.java
 #
 title.alone=RChat
 title.string=RChat - {0}
