--- a/rchat-client/src/main/resources/strings/strings_en.properties
+++ b/rchat-client/src/main/resources/strings/strings_en.properties
@@ -35,12 +35,12 @@ whats-up.join=* {1} has joined #{0}
 whats-up.part=* {1} has left #{0}
 whats-up.topic=* {1} changed topic on #{0} to: {2}
 whats-up.kick=* {1} has ben kicked from #{0} by {2}
-whats-up.ban.1=* {1} has ben banned on #{0} by {2}
-whats-up.ban.0=* {1} has ben unbanned on #{0} by {2}
-whats-up.admin.1=* {1} is now an admin on #{0}, promoted by {2}
-whats-up.admin.0=* {1} is no longer admin on #{0}, degraded by {2}
-whats-up.ignore.1=* {2} ignores messages written by {1}
-whats-up.ignore.0=* {2} no longer ignore messages written by {1}
+whats-up.ban.on=* {1} has ben banned on #{0} by {2}
+whats-up.ban.off=* {1} has ben unbanned on #{0} by {2}
+whats-up.admin.on=* {1} is now an admin on #{0}, promoted by {2}
+whats-up.admin.off=* {1} is no longer admin on #{0}, degraded by {2}
+whats-up.ignore.on=* {2} ignores messages written by {1}
+whats-up.ignore.off=* {2} no longer ignore messages written by {1}
 #
 cmd.unknown=Unknown command given.
 cmd.list=Available commands: /topic /kick /ban /admin /ignore
