client: motd with hit about commands + more time before fleeting status disappear

--- a/rchat-client/src/main/resources/strings/strings_en.properties
+++ b/rchat-client/src/main/resources/strings/strings_en.properties
@@ -42,6 +42,8 @@ whats-up.admin.off=* {1} is no longer admin on #{0}, degraded by {2}
 whats-up.ignore.on=* {2} ignores messages written by {1}
 whats-up.ignore.off=* {2} no longer ignore messages written by {1}
 #
+hello.motd=Hello! | MOTD: Hint: type / in channel to see available commands.
+#
 cmd.unknown=Unknown command given.
 cmd.list=Available commands: /topic /kick /ban /admin /ignore
 cmd.topic.syntax=Syntax: /topic some fancy text
